--- a/countrypicker/src/main/res/layout/item_normal.xml
+++ b/countrypicker/src/main/res/layout/item_normal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_normal_height"
@@ -10,7 +10,7 @@
       android:layout_width="30dp"
       android:layout_height="30dp"
       android:layout_marginStart="@dimen/margin_start"
-      android:layout_gravity="center_vertical"
+      android:layout_centerVertical="true"
       tools:ignore="ContentDescription"
       />
 
@@ -18,8 +18,21 @@
       android:id="@+id/normal"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_toEndOf="@id/icon"
       android:layout_marginStart="@dimen/margin_start"
       android:textColor="@android:color/black"
       android:text="@string/app_name"
-      android:layout_gravity="center_vertical"/>
-</LinearLayout>
+      android:layout_centerVertical="true" />
+
+
+  <TextView
+      android:id="@+id/code"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="@dimen/margin_start"
+      android:layout_marginEnd="48dp"
+      android:textColor="@android:color/black"
+      android:layout_centerVertical="true"
+      android:layout_alignParentEnd="true"
+      tools:text="+44"/>
+</RelativeLayout>
