--- a/countrypicker/src/main/res/layout/header.xml
+++ b/countrypicker/src/main/res/layout/header.xml
@@ -11,9 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="12dp"
         android:text="@string/anonymous_number"
-        android:textColor="@android:color/black" />
+        android:textColor="@color/text_black" />
 
     <RelativeLayout
         android:id="@+id/mixin_rl"
@@ -26,7 +25,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/margin_start"
+            android:layout_marginStart="32dp"
             android:src="@drawable/flag_mixin"
             tools:ignore="ContentDescription" />
 
@@ -38,6 +37,7 @@
             android:layout_marginStart="@dimen/margin_start"
             android:layout_toEndOf="@id/icon"
             android:text="@string/Mixin"
+            android:textSize="16sp"
             android:textColor="@android:color/black" />
 
 
@@ -49,7 +49,7 @@
             android:layout_centerVertical="true"
             android:layout_marginStart="@dimen/margin_start"
             android:layout_marginEnd="48dp"
-            android:textColor="@android:color/black"
+            android:textColor="@color/text_gray"
             android:text="@string/mixin_dial_code"
             tools:text="@string/mixin_dial_code" />
     </RelativeLayout>
