--- a/countrypicker/src/main/res/layout/item_header.xml
+++ b/countrypicker/src/main/res/layout/item_header.xml
@@ -2,15 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:background="@color/bg_gray">
+    android:layout_height="30dp">
 
   <TextView
       android:id="@+id/header"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/margin_start"
-      android:textSize="13sp"
-      android:textColor="@color/text_gray"
+      android:textSize="14sp"
+      android:textColor="@color/text_black"
       android:layout_gravity="center_vertical"/>
 </FrameLayout>
