--- a/countrypicker/src/main/res/layout/item_normal.xml
+++ b/countrypicker/src/main/res/layout/item_normal.xml
@@ -9,7 +9,7 @@
       android:id="@+id/icon"
       android:layout_width="30dp"
       android:layout_height="30dp"
-      android:layout_marginStart="@dimen/margin_start"
+      android:layout_marginStart="32dp"
       android:layout_centerVertical="true"
       tools:ignore="ContentDescription"
       />
@@ -20,7 +20,8 @@
       android:layout_height="wrap_content"
       android:layout_toEndOf="@id/icon"
       android:layout_marginStart="@dimen/margin_start"
-      android:textColor="@android:color/black"
+      android:textSize="16sp"
+      android:textColor="@color/text_black"
       android:text="@string/app_name"
       android:layout_centerVertical="true" />
 
@@ -31,7 +32,7 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/margin_start"
       android:layout_marginEnd="48dp"
-      android:textColor="@android:color/black"
+      android:textColor="@color/text_gray"
       android:layout_centerVertical="true"
       android:layout_alignParentEnd="true"
       tools:text="+44"/>
